# mandelbrot

./: .gitmodules  CMakeLists.txt  Readme.md  escape-algorithm-colors.glsl  escape-algorithm-optimized.glsl  fragment-border.glsl  glad.c  input.c  input.h  main.c  makefile  mandelbrot.c  mandelbrot.glsl  mandelbrot.h  properties.c  properties.h  shader.c  shader.h  window.c  window.h
Mandelbrot/Headers/: input.h  main.h  mandelbrot.h  properties.h  shader.h  window.h
Mandelbrot/Shaders/: escape-algorithm-colors.glsl  escape-algorithm.glsl  vertex-shader-id.glsl
Mandelbrot/Sources/: input.c  main.c  mandelbrot.c  properties.c  shader.c  window.c
glfwtest/: glfwtest
include/glad/: glad.h
